--- a/react/01-pure-react/index.html
+++ b/react/01-pure-react/index.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puro-React</title>
+    <title>Document</title>
 </head>
 <body>
-    <div id="root">
-
-
-    </div>
-
-    <script>
-        console.log("hello 002")
-    </script>
+    
 </body>
 </html>
